Launcher3: Allow changing app suggestion settings
Change-Id: Ib077324ba6676a1b8e143b26c14bf0b6eb258d28
Signed-off-by: str-br <alexfinhart@gmail.com>
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: S I P U N <sipunkumar85@gmail.com>

--- a/res/values/superior_strings.xml
+++ b/res/values/superior_strings.xml
@@ -57,4 +57,8 @@
      LIMIT=100] -->
      <string name="msg_minus_one_on_right">When you swipe left from main home screen</string>
 
+     <!-- Suggestions -->
+     <string name="suggestion_pref_screen_title">Suggestions</string>
+     <string name="suggestion_pref_screen_desc">For All Apps &amp; Home screen suggestions</string>
+
 </resources>
