--- a/res/layout/secondary_launcher.xml
+++ b/res/layout/secondary_launcher.xml
@@ -105,7 +105,8 @@
             android:layout_centerHorizontal="true"
             android:layout_gravity="top|center_horizontal"
             android:background="@drawable/bg_all_apps_searchbox"
-            android:elevation="1dp"
+            android:paddingBottom="10dp"
+            android:elevation="3dp"
             android:focusableInTouchMode="true"
             android:gravity="center"
             android:hint="@string/all_apps_search_bar_hint"
