--- a/res/xml/launcher_preferences.xml
+++ b/res/xml/launcher_preferences.xml
@@ -49,6 +49,12 @@
         android:persistent="true"
         launcher:logIdOn="615"
         launcher:logIdOff="616" />
+        
+    <SwitchPreference
+        android:key="pref_enable_minus_one"
+        android:title="@string/title_show_google_app"
+        android:summary="@string/pref_show_google_now_summary"
+        android:defaultValue="true" />
 
     <androidx.preference.PreferenceScreen
         android:key="pref_developer_options"
